[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/hit_boxes/hit_box.gd" type="Script" id=1]
[ext_resource path="res://scripts/units/movers/bullet_mover.gd" type="Script" id=2]
[ext_resource path="res://scripts/movement_stats.gd" type="Script" id=3]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 9 )

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="MovementStats" type="Node" parent="."]
script = ExtResource( 3 )
MAX_SPEED = 1000
FRICTION = 0.0

[node name="BulletMover" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="HitBox" type="Area2D" parent="."]
scale = Vector2( 1, 1.00313 )
collision_layer = 8
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="collided" from="BulletMover" to="." method="_on_BulletMover_collided"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
